[project]
name = "essay-writer"
version = "0.1.0"
description = "Essay Writer"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "langchain==0.3.9",
    "langgraph.checkpoint.sqlite",
    "openai==1.56.0",
    "langchain-openai==0.2.10",
    "neo4j==5.27.0",
    "streamlit==1.35.0",
    "langchainhub==0.1.21",
    "langchain-neo4j==0.1.1",
    "colorama",
    "datasets==2.21.0",
    "fpdf==1.7.2",
    "langchain-community==0.3.9",
    "langchain-experimental==0.3.3",
    "python-dotenv==1.0.1",
    "pypdf==4.3.1",
    "pydantic==2.9.1",
    "pydantic_core==2.23.3",
    "beautifulsoup4==4.13.3",
    "langgraph",
    "langchain-core>= 0.3",
    "langchain_community",
    "tavily-python",
    "duckduckgo_search",
    "db-sqlite3",

]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]

